--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,13 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^6.1.5",
     "@mui/material": "^6.1.5",
+    "@types/node": "^24.3.0",
+    "dayjs": "^1.11.10",
+    "node-fetch": "^3.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "tsx": "^4.20.5"
   },
   "devDependencies": {
     "@types/react": "^18.3.5",
