--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "pull-espn": "tsx src/scripts/pullEspnNfl.ts",
+    "generate-factbooks": "tsx src/scripts/generateFactbooks.ts",
+    "test-picks": "tsx src/scripts/testPickSelection.ts"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
