--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "pull-espn": "tsx src/scripts/pullEspnNfl.ts",
+    "generate-games": "tsx src/scripts/generateNflGames.ts",
     "generate-factbooks": "tsx src/scripts/generateFactbooks.ts",
     "test-picks": "tsx src/scripts/testPickSelection.ts"
   },
