--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "generate-games": "tsx src/scripts/generateNflGames.ts",
     "generate-factbooks": "tsx src/scripts/generateFactbooks.ts",
     "generate-picks": "tsx src/scripts/generatePicks.ts",
+    "log-market-scoring": "tsx src/scripts/generateMarketScoringLog.ts",
     "generate-all": "npm run generate-games -- $WEEK && npm run generate-factbooks -- $WEEK && npm run generate-picks -- $WEEK",
     "test-picks": "tsx src/scripts/testPickSelection.ts"
   },
