--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
     }
   ],
   "rewrites": [
-    { "source": "/(.*)", "destination": "/index.html" }
+    { "source": "/(.*)", "destination": "/frontend/dist/index.html" }
   ]
 }
 
